[Qt] Fix RadioButton CSS
Our HD recovery/creation screen introduced a seemingly random bit of CSS, which messed up RadioButtons for CoinControl, fee selection, etc. Nuking it!

--- a/src/qt/res/css/default.css
+++ b/src/qt/res/css/default.css
@@ -1694,7 +1694,7 @@ color:#818181;
 }
 
 
-/*Seed Words Generator*/
+/* Seed Words Generator */
 QListView {
     background-color: white;
     border: 2px solid white;
@@ -1708,35 +1708,6 @@ QListView::item {
 QGraphicsView {
     background-color: white;
     border: 2px solid white;
-}
-
-QRadioButton {
-    height: 40px;
-    text-align: center;
-    font-size: 20px;
-    padding: 20px;
-    border-radius: 8px;
-}
-QRadioButton:focus {
-    background-color: #000;
-}
-QRadioButton::indicator {
-    display: none;
-    opacity: 0;
-    width: 0px;
-    height: 0px;
-}
-QRadioButton:checked {
-    background-color: transparent;
-    border: 2px solid #9966cc;
-}
-QRadioButton:unchecked {
-    background-color: transparent;
-    border-width: 2px;
-    border-color:  #777;
-}
-QRadioButton::unchecked:hover {
-    background-color:  white;
 }
 
 QListWidget {
